--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header class="dashboard-header">
+    <div class="logo">MyLogo</div>
+  
+    <div class="search-container">
+      <kendo-textbox class="search-bar" placeholder="Search...">
+        <ng-template kendoTextBoxPrefix>
+        </ng-template>
+      </kendo-textbox>
+    </div>
+  
+    <kendo-button look="flat" class="notification-icon" aria-label="Notifications"></kendo-button>
+  </header>
+  
