--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,38 @@
-<header class="dashboard-header">
-    <div class="logo">MyLogo</div>
-  
-    <div class="search-container">
-      <kendo-textbox class="search-bar" placeholder="Search...">
-        <ng-template kendoTextBoxPrefix>
-        </ng-template>
-      </kendo-textbox>
-    </div>
-  
-    <kendo-button look="flat" class="notification-icon" aria-label="Notifications"></kendo-button>
-  </header>
-  
+<kendo-appbar>
+  <kendo-appbar-section>
+    <button kendoButton fillMode="flat">
+      <kendo-svgicon [icon]="menuIcon"></kendo-svgicon>
+    </button>
+  </kendo-appbar-section>
+
+  <kendo-appbar-spacer width="8px"></kendo-appbar-spacer>
+
+  <kendo-appbar-section>
+    <h1 class="title">Demo App</h1>
+  </kendo-appbar-section>
+
+  <kendo-appbar-spacer width="268px"></kendo-appbar-spacer>
+
+  <kendo-appbar-section>
+    <kendo-textbox
+      [style.width.px]="360"
+      placeholder="Search"
+      [clearButton]="true"
+    >
+      <ng-template kendoTextBoxPrefixTemplate>
+        <kendo-svgicon [icon]="searchIcon"></kendo-svgicon>
+      </ng-template>
+    </kendo-textbox>
+  </kendo-appbar-section>
+
+  <kendo-appbar-spacer></kendo-appbar-spacer>
+
+  <kendo-appbar-section class="actions">
+    <kendo-badge-container>
+      <button kendoButton fillMode="flat">
+        <kendo-svgicon [icon]="bellIcon"></kendo-svgicon>
+      </button>
+      <kendo-badge size="small">12</kendo-badge>
+    </kendo-badge-container>
+  </kendo-appbar-section>
+</kendo-appbar>
