added logged in state in ngrx

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
           <kendo-svgicon [icon]="userIcon"></kendo-svgicon>
           Admin user
         </span>
-        <button kendoButton look="flat">Logout</button>
+        <button kendoButton look="flat" (click)="logOut()">Logout</button>
       </div>
     </div>
   </div>
