--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -3,10 +3,39 @@
     background-color: #ffffff;
     border-right: 1px solid #e0e0e0;
     height: 95% ;
-    padding: 20px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    transition: width 0.3s ease;
+    position: relative;
+  }
+
+  .sidebar.collapsed {
+    width: 40px; 
+  }
+
+  .toggle-btn {
+    position: absolute;
+    right: -10px; 
+    top: 15px; 
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    padding: 0%;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    transition: right 0.3s ease;
+  }
+  
+  .toggle-btn kendo-svgicon {
+    width: 20px;
+    height: 20px;
+    color: rgb(78, 73, 73);
   }
   
   .tab-list {
@@ -17,12 +46,14 @@
   .tab-list li {
     padding: 10px;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 10px;
+    border: 2px solid transparent; 
+    transition: border-color 0.5s ease;
     transition: background-color 0.3s ease;
   }
   
   .tab-list li.active {
-    background-color: #fc7373;
+    border-color: #fc7373;
     font-weight: bold;
   }
   
@@ -49,3 +80,10 @@
     margin-top: 5px;
   }
   
+  .group-title {
+    padding: 10px;
+    color: grey;
+    font-weight: bold;
+    cursor: default;
+    pointer-events: none; 
+  }
