--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 @import '@progress/kendo-theme-default/dist/all.css';
+
+@font-face {
+    font-family: 'myInter';
+    src: url('../public/Inter-VariableFont_opsz\,wght.ttf');
+  }
+body {
+  padding: 0;
+  font-family: 'myInter' , serif;
+  font-size: small;
+}
