--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,24 +1,24 @@
 .dashboard-container {
     display: flex;
-    flex-direction: column;
-    height: 100vh; 
+    flex-direction: row;
+    height: 100vh;
+    background-color:#fafafa; 
   }
   
   
   .dashboard-body {
     display: flex;
+    flex-direction: column;
     flex: 1; 
+    padding-left: 20px;
   }
   
   app-sidebar {
-    width: 250px;
-    height: 100vh - 600px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    width: 230px;
   }
   
   .content-area {
     flex: 1; 
-    background-color: #f5f5f5;
     padding: 5px 5px;
     overflow-y: auto; 
   }
