--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,14 +1,14 @@
 .sidebar {
     width: 200px;
     background-color: #ffffff;
-    border-right: 1px solid #e0e0e0;
-    height: 95% ;
+    height: 100% ;
     padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     transition: width 0.3s ease;
     position: relative;
+    box-shadow: 1px 0 2px rgb(145, 136, 136);
   }
 
   .sidebar.collapsed {
@@ -18,7 +18,7 @@
   .toggle-btn {
     position: absolute;
     right: -10px; 
-    top: 15px; 
+    top: 30px; 
     width: 20px;
     height: 20px;
     border-radius: 50%; 
@@ -46,19 +46,31 @@
   .tab-list li {
     padding: 10px;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 8px;
     border: 2px solid transparent; 
     transition: border-color 0.5s ease;
     transition: background-color 0.3s ease;
+    position: relative;
   }
   
   .tab-list li.active {
     border-color: #fc7373;
     font-weight: bold;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.158);
   }
   
   .tab-list li:hover {
     background-color: #e0e0e0;
+  }
+
+  .selectBar {
+    position: absolute;
+    left: 0; 
+    top: 50%;
+    transform: translateY(-50%); 
+    width: 3px; 
+    height: 1.3em; 
+    background-color: #fc7373;
   }
   
   .profile-section {
@@ -82,8 +94,20 @@
   
   .group-title {
     padding: 10px;
-    color: grey;
+    color: rgb(170, 170, 170);
     font-weight: bold;
     cursor: default;
     pointer-events: none; 
+  }
+
+  .logo-container {
+    display: flex;
+    height: 10%;
+    justify-content: center;  
+    margin-bottom: 20px;  
+  }
+  
+  .logo {
+    max-width: 80%;  
+    border-radius: 8px;  
   }
