added dropdown to sidebar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,6 +35,7 @@
           <h3 class="name">Kabir Ahmed</h3>
           <p class="role">Admin</p>
         </div>
+        <kendo-svgicon [icon]="dropdownIcon"></kendo-svgicon>
       </div>
   </kendo-appbar-section>
 
