--- a/src/app/analytics/analytics.component.scss
+++ b/src/app/analytics/analytics.component.scss
@@ -8,7 +8,6 @@
     border-radius: 8px;
     overflow: hidden;
     padding: 10px;
-    margin-left: 15px;
   }
   
   .map-card-header {
@@ -35,7 +34,7 @@
   .charts {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   
   .line-chart-card {
