1st test commit

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+<div>
+  <button> new changes</button>
+</div>
+
 <div class="group-bar-chart" *ngIf="groupedData && groupedData.length && barSeries && barSeries.length">
     <kendo-chart>
       <kendo-chart-title text="Sales by Product Group (2018-2021)"></kendo-chart-title>
