--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button> reseted changes</button>
+  <button> test commit 1</button>
 </div>
 
 <div class="group-bar-chart" *ngIf="groupedData && groupedData.length && barSeries && barSeries.length">
