--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <div>
   <button> test commit 4</button>
+  <p>this is my first line</p>
+  <p>this is my second line</p>
+  <p>this is my third line</p>
 </div>
 
 <div class="group-bar-chart" *ngIf="groupedData && groupedData.length && barSeries && barSeries.length">
