--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -20,10 +20,11 @@ kendo-grid {
     padding: 10px;
 }
 .grid-button {
-    padding: 10px;
+    padding: 8px 10px;
     border-radius: 8px;
     background-color: #f1f2f6;
-    border: 0;
+    border: 1px solid #e3e7f2;
+    color: #545e72;
 }
 .grid-button:hover{
     background-color: #dddee6;
@@ -44,6 +45,7 @@ kendo-grid {
 }
 
 .grid-search-box {
+    border-radius: 8px;
     padding: 2px 2px;
     width: 30%;
 }
@@ -144,6 +146,13 @@ kendo-grid {
     border-radius: 5px;
   }
   
+  .k-pager {
+    border-radius: 0 0 10px 10px;
+    outline: none;
+    &:focus, &:active{
+      border-color: transparent;
+    }
+  }
 
   .grid-footer {
     display: flex;
@@ -185,10 +194,18 @@ kendo-grid {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 4px 8px;
+    border-radius: 8px;
     background-color: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    color: #5a5b6a;
+    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.2); 
+  }
+
+  .footer-button:disabled {
+    background-color: #e0e0e0; 
+    color: #a0a0a0; 
+    box-shadow: none; 
   }
   
   .footer-button:hover{
