custom grid template

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,204 +35,6 @@
   </div>
   
   <div class="home-grid">
-    <kendo-grid
-      [kendoGridBinding]="gridData"
-      [sortable]="true" 
-      [pageSize]="pageSize"
-      [skip]="skip"
-      [pageable]="true"
-      [style.width.%]="100"
-      (dataStateChange)="onPageChange($event)"
-      class="custom-grid"
-  >
-      
-      <ng-template kendoGridToolbarTemplate >
-        <div class="grid-title">Check List</div>
-        <kendo-grid-spacer></kendo-grid-spacer>
-        <kendo-textbox
-          placeholder="Search by check or producer name"
-          class="grid-search-box"
-          [style.width.px]="320"
-        >
-        <ng-template kendoTextBoxPrefixTemplate>
-          <kendo-svgicon [icon]="searchIcon"></kendo-svgicon>
-        </ng-template>
-        </kendo-textbox>
-        <button class="grid-button grey-cell-text-cl">Customize Columns</button>
-        <button  class="grid-button grey-cell-text-cl" (click)="toggleFilterRow()">
-          <kendo-svgicon [icon]="filterIcon"></kendo-svgicon>
-          Filter
-        </button>
-        <button  class="grid-button export-button">
-          Export as
-          <kendo-svgicon [icon]="dropdownIcon"></kendo-svgicon>
-        </button>
-
-        <div *ngIf="showFilterRow" class="filter-row-container">
-          <div class="filter-row">
-            <div class="filter-button" (click)="datePicker.toggle()">
-              <kendo-svgicon [icon]="calendarIcon" class="button-icon-left"></kendo-svgicon>
-              <kendo-datepicker
-                  #datePicker
-                  placeholder="Check date"
-                ></kendo-datepicker>
-              <kendo-svgicon [icon]="dropdownIcon" class="button-icon-right"></kendo-svgicon>
-            </div>
-
-            <div #amountAnchor class="filter-button" (click)="toggleDropdown('Amount', amountAnchor)">
-              <kendo-svgicon [icon]="dollarIcon" class="button-icon-left"></kendo-svgicon>
-              <span>Amount</span>
-              <kendo-svgicon [icon]="dropdownIcon" class="button-icon-right"></kendo-svgicon>
-            </div>
-            
-            <div #grossAnchor class="filter-button" (click)="toggleDropdown('Gross amount', grossAnchor)">
-              <kendo-svgicon [icon]="dollarIcon" class="button-icon-left"></kendo-svgicon>
-              <span>Gross amount</span>
-              <kendo-svgicon [icon]="dropdownIcon" class="button-icon-right"></kendo-svgicon>
-            </div>
-
-            <div #netAnchor class="filter-button" (click)="toggleDropdown('Net income', netAnchor)">
-              <kendo-svgicon [icon]="dollarIcon" class="button-icon-left"></kendo-svgicon>
-              <span>Net income</span>
-              <kendo-svgicon [icon]="dropdownIcon" class="button-icon-right"></kendo-svgicon>
-            </div>
-            
-            <div #bonusAnchor class="filter-button" (click)="toggleDropdown('Bonus', bonusAnchor)">
-              <kendo-svgicon [icon]="dollarIcon" class="button-icon-left"></kendo-svgicon>
-              <span>Bonus</span>
-              <kendo-svgicon [icon]="dropdownIcon" class="button-icon-right"></kendo-svgicon>
-            </div>
-            
-            <div #deductionAnchor class="filter-button" (click)="toggleDropdown('Deduction', deductionAnchor)">
-              <kendo-svgicon [icon]="dollarIcon" class="button-icon-left"></kendo-svgicon>
-              <span>Deduction</span>
-              <kendo-svgicon [icon]="dropdownIcon" class="button-icon-right"></kendo-svgicon>
-            </div>
-            
-            <button class="filter-reset-button" (click)="resetFilters()">Reset Filters</button>
-
-            <kendo-popup [anchor]="filterAnchor" (anchorViewportLeave)="showPopup = false" *ngIf="showPopup">
-              <div class="popup-card">
-                <h4>Select {{filterField}}</h4>
-        
-                <div class="popup-content">
-                  <div class="range-inputs">
-                    <div class="min-max-label">
-                      <label>Min</label>
-                      <label>Max</label>
-                    </div>
-                    <div class="min-max-label">
-                      <input type="number" [(ngModel)]="value[0]" class="input-number" />
-                      <input type="number" [(ngModel)]="value[1]" class="input-number" />
-                    </div>
-                  </div>
-        
-                  <div class="range-slider">
-                    <kendo-rangeslider
-                      tickPlacement="none"
-                      [min]="min"
-                      [max]="max"
-                      [(ngModel)]="value"
-                    >
-                    </kendo-rangeslider>
-                  </div>
-        
-                  <hr />
-                </div>
-        
-                <div class="popup-actions">
-                  <kendo-dropdownlist
-                    [data]="[100, 200, 300]"
-                    textField="text"
-                    valueField="value"
-                    [defaultItem]="{ value: null, text: 'is equal to' }"
-                    style="margin-right: 10px"
-                  >
-                  </kendo-dropdownlist>
-                  
-                  <div class="actions-button">
-                    <button class="action-button cancel" (click)="onCancel()">Cancel</button>
-                    <button class="action-button apply" (click)="onApply()">Apply Filter</button>
-                  </div>
-                </div>
-              </div>
-            </kendo-popup>
-
-          </div>
-        </div>
-
-      </ng-template>
-
-      <kendo-grid-column 
-        *ngFor="let column of columns" 
-        [field]="column.field" 
-        [title]="column.title" 
-        [width]="column.width">
-
-        <ng-template kendoGridHeaderTemplate let-column="column">
-          <span  [ngClass]="{ 'grey-cell-text-cl': column.field === 'gross_income' || column.field === 'date' || column.field === 'bonus' || column.field === 'deductions' || column.field === 'net_income'}">
-            <span >{{ column.title }}</span>
-            <kendo-svgicon 
-              [icon]="arrowsSwapIcon" 
-              *ngIf="!column.kendoGridSortedColumn" 
-              class="header-icon"
-            ></kendo-svgicon>
-          </span>
-        </ng-template>
-
-        <ng-template kendoGridCellTemplate let-dataItem="dataItem" let-column="column">
-          <span *ngIf="column.field === 'amount'">
-            <kendo-svgicon
-              [icon]="dataItem.amount > 200 ? upArrowIcon : downArrowIcon"
-              [ngClass]="{
-                'text-green-500': dataItem.amount > 200,
-                'text-red-500': dataItem.amount < 200
-              }"
-              class="cell-icon"
-            ></kendo-svgicon>
-          </span>
-
-          <span  [ngClass]="{ 'grey-cell-text-cl': column.field === 'gross_income' || column.field === 'date' || column.field === 'bonus' || column.field === 'deductions' || column.field === 'net_income'}">
-            <span *ngIf="column.field === 'gross_income' || column.field === 'bonus' || column.field === 'deductions' || column.field === 'net_income' || column.field === 'amount'">
-              <kendo-svgicon [icon]="dollarIcon" class="cell-icon"></kendo-svgicon>
-            </span>
-            <span>{{ dataItem[column.field] }}</span>
-          </span>
-        </ng-template>
-
-      </kendo-grid-column>
-
-      <ng-template kendoPagerTemplate >
-        <div class="grid-footer grey-cell-text-cl" >
-          <div class="footer-left ">
-            <select [(ngModel)]="pageSize" (change)="onPageSizeChange(pageSize)" class="footer-button">
-              <option *ngFor="let size of [10, 15, 20, 50]" [value]="size">{{ size }} items</option>
-            </select>
-          </div>
-    
-          <div class="footer-center">
-            <span 
-              class="page-number" 
-              *ngFor="let page of pageNumbers" 
-              [class.active]="currentPage === page"
-              (click)="goToPage(page)"
-            >
-              {{ page }}
-            </span>
-          </div>
-    
-          <div class="footer-right">
-            <button class="footer-button" (click)="prevPage()" [disabled]="currentPage === 1">
-              <kendo-svgicon [icon]="leftarrow"></kendo-svgicon>
-              Previous
-            </button>
-            <button class="footer-button" (click)="nextPage()" [disabled]="currentPage === totalPages">
-              Next
-              <kendo-svgicon [icon]="rightarrow"></kendo-svgicon>
-            </button>
-          </div>
-        </div>
-      </ng-template>
-
-    </kendo-grid>
+    <app-custom-grid [gridData]="gridData" [columns]="columns" [filterColumns]="filterColumns"></app-custom-grid>
+    <app-custom-grid [gridData]="grid2data" [columns]="grid2Columns" [filterColumns]="grid2FilterCol"></app-custom-grid>
   </div>
